# agent-todo-impl

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
src/agent_todo_impl/: __init__.py  checkpoint.py  cli.py  mdscan.py  orchestrator.py  project_scan.py
src/agent_todo_impl/execution/: actions.py  cursor_agent.py  executor.py  external_cli.py
src/agent_todo_impl/git/: git_manager.py
src/agent_todo_impl/llm/: base.py  openai_client.py
src/agent_todo_impl/planning/: plan_generator.py  plan_parser.py
src/agent_todo_impl/quality/: gates.py
src/agent_todo_impl/review/: reviewer.py
tests/: test_checkpoint.py  test_cursor_agent_prompt.py  test_executor_actions.py  test_external_cli_commands.py  test_git_manager.py  test_mdscan.py  test_plan_parser.py  test_project_scan.py  test_run_cwd_behavior.py
