 [project]
 name = "agent-todo-impl"
 version = "0.1.0"
 description = "Document-driven agent orchestration: plan -> implement -> review loop."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "openai>=1.40.0",
   "typer>=0.12.0",
 ]
 
 [project.optional-dependencies]
 dev = [
   "pytest>=8.0.0",
   "ruff>=0.5.0",
 ]
 
 [project.scripts]
 agent-todo = "agent_todo_impl.cli:app"
 
 [build-system]
 requires = ["hatchling>=1.24.0"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/agent_todo_impl"]
 
 [tool.ruff]
 line-length = 100
 target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 addopts = "-q"
