 [project]
 name = "agent-todo-impl"
 version = "0.1.0"
 description = "Document-driven agent orchestration: plan -> implement -> review loop."
 readme = "README.md"
requires-python = ">=3.10"
 dependencies = [
  "openai==2.29.0",
  "typer==0.12.3",
 ]
 
 [project.optional-dependencies]
 dev = [
  "pytest==8.4.2",
  "ruff==0.5.7",
 ]
 
 [project.scripts]
 agent-todo = "agent_todo_impl.cli:app"
 
 [build-system]
 requires = ["hatchling>=1.24.0"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/agent_todo_impl"]
 
 [tool.ruff]
 line-length = 100
target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/agent_todo_impl/cli.py" = ["B008"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 addopts = "-q"
